[package]
name = "passage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chardetng = "1.0.0"
clap = {version = "4.6.1", features = ["derive"]}
encoding_rs = "0.8.35"
regex = "1.12.4"
reqwest = {version = "0.13.4", features = ["blocking", "stream"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
walkdir = "2.5.0"
